5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1800_2565.log
== TEST (2019-06-06 11:23:36) 
-- CODE:
from numpy import*

a = array(eval(input("media: ")))
b = array(eval(input("presenca: ")))
c = float(input("carga horaria: "))

cont = zeros(3, dtype=int)

for i in range(size(a)):
	
	if a[i] >= 5 and b[i]/100 * c >= 75: #aprovados
		cont[0] = cont[0] + 1
		
	elif a[i] <=5 and b[i]/100 * c >= 75:
		cont[1] = cont[1] +1
	
	elif a[i] >= 5 and b[i]/100 * c <= 75
		cont[2] = cont[2] + 1
		
print(cont)
-- ERROR:
File "XXXX", line 17
    elif a[i] >= 5 and b[i]/100 * c <= 75
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:42) 
-- CODE:
from numpy import*

a = array(eval(input("media: ")))
b = array(eval(input("presenca: ")))
c = float(input("carga horaria: "))

cont = zeros(3, dtype=int)

for i in range(size(a)):
	
	if a[i] >= 5 and b[i]/100 * c >= 75: #aprovados
		cont[0] = cont[0] + 1
		
	elif a[i] <=5 and b[i]/100 * c >= 75:
		cont[1] = cont[1] +1
	
	elif a[i] >= 5 and b[i]/100 * c <= 75:
		cont[2] = cont[2] + 1
		
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:09) 
-- CODE:
from numpy import*

a = array(eval(input("media: ")))
b = array(eval(input("presenca: ")))
c = float(input("carga horaria: "))

cont = zeros(3, dtype=int)

for i in range(size(a)):
	
	if a[i] >= 5 and b[i]/100 * c >= 75: #aprovados
		cont[0] = cont[0] + 1
		
	elif a[i] <=5 and b[i]/100 * c >= 75:
		cont[1] = cont[1] +1
	
	elif a[i] >= 5 and b[i]/100 * c <= 75:
		cont[2] = cont[2] + 1
		
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:27:51) 
-- CODE:
from numpy import*

a = array(eval(input("media: ")))
b = array(eval(input("presenca: ")))
c = float(input("carga horaria: "))

cont = zeros(3, dtype=int)

for i in range(size(a)):
	
	if a[i] >= 5 and b[i] >= c * (75/100): #aprovados
		cont[0] = cont[0] + 1
		
	elif a[i] <=5 and b[i] >= c * (75/100):
		cont[1] = cont[1] +1
	
	elif a[i] >= 5 and b[i] <= c * (75/100):
		cont[2] = cont[2] + 1
		
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:28:23) 
-- CODE:
from numpy import*

a = array(eval(input("media: ")))
b = array(eval(input("presenca: ")))
c = float(input("carga horaria: "))

cont = zeros(3, dtype=int)

for i in range(size(a)):
	
	if a[i] >= 5 and b[i] >= c * (75/100): #aprovados
		cont[0] = cont[0] + 1
		
	elif a[i] <=5 and b[i] >= c * (75/100):
		cont[1] = cont[1] +1
	
	elif a[i] >= 5 and b[i] <= c * (75/100):
		cont[2] = cont[2] + 1
		
print(cont)
-- EXECUTION TIME:
0.890784
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
